--- a/src/app.css
+++ b/src/app.css
@@ -30,3 +30,12 @@
 *::after {
   box-sizing: border-box;
 }
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
