--- a/src/app.css
+++ b/src/app.css
@@ -39,3 +39,34 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+@property --gradstop {
+  syntax: '<percentage>';
+  initial-value: 0%;
+  inherits: false;
+}
+
+.bg-skeleton {
+  background: linear-gradient(
+      100deg,
+      rgba(0, 0, 0, 0) calc(var(--gradstop) - 20%),
+      rgba(255, 255, 255, 0.1),
+      rgba(0, 0, 0, 0) var(--gradstop)
+    )
+    #666666;
+  animation: 3s loading ease-in-out infinite;
+}
+
+@keyframes loading {
+  0% {
+    --gradstop: 0%;
+  }
+
+  20% {
+    --gradstop: 120%;
+  }
+
+  100% {
+    --gradstop: 120%;
+  }
+}
